# PPN-AI-ACCE

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  default.nix  pre-commit.sh  source
benchmarks/: approximations.cpp  array_add.cpp  array_copy.cpp  array_min.cpp  bench_common.hpp  codelet_c_k_means_line109.cpp  codelet_crystal_cholesky.cpp  codelet_generate_seq_laplacian_line73.cpp  codelet_kernels_serial_amr_c_main_line500_0.cpp  codelet_kernels_serial_amr_c_main_line502_0.cpp  codelet_kernels_serial_amr_c_main_line506_0.cpp  codelet_kernels_serial_amr_c_main_line508_0.cpp  codelet_kernels_serial_sparse_c_main_line236_0.cpp  codelet_kernels_serial_sparse_c_main_line256_0.cpp  codelet_kernels_serial_transpose_c_main_line176_0.cpp  codelet_kernels_stencil_c_main_line259_0.cpp  codelet_liblinear.cpp  codelet_libraries_default_daala_dct_c_compute_mse_line8488_0.cpp  codelet_libraries_default_daala_dct_c_compute_mse_line8488_8.cpp  codelet_libraries_default_daala_dct_c_compute_mse_line8497_0.cpp  codelet_libraries_default_daala_dct_c_dynamic_range_line8685_0.cpp  codelet_libraries_default_libsndfile_alac_c_alac_read_d_line575_0.cpp  codelet_libraries_default_twolame_encode_c_combine_lr_line330_0.cpp  codelet_libraries_default_twolame_encode_c_combine_lr_line330_1.cpp  codelet_libraries_default_twolame_psycho_1_c_psycho_1_hann_fft_pickmax_line184_0.cpp  codelet_libraries_default_twolame_psycho_3_c_psycho_3_fft_line89_0.cpp  codelet_livermore_default_lloops_c_endloop_line1795_0.cpp  codelet_livermore_default_lloops_c_endloop_line1795_3.cpp  codelet_livermore_default_lloops_c_kernels_line1031_0.cpp  codelet_livermore_default_lloops_c_kernels_line1113_0.cpp  codelet_livermore_default_lloops_c_kernels_line1113_3.cpp  codelet_livermore_default_lloops_c_kernels_line1340_0.cpp  codelet_livermore_default_lloops_c_kernels_line1351_0.cpp  codelet_livermore_default_lloops_c_kernels_line1351_64.cpp  codelet_livermore_default_lloops_c_kernels_line1444_0.cpp  codelet_livermore_default_lloops_c_kernels_line1444_144.cpp  codelet_livermore_default_lloops_c_kernels_line1444_156.cpp  codelet_livermore_default_lloops_c_kernels_line771_0.cpp  codelet_livermore_default_lloops_c_kernels_line869_0.cpp  codelet_livermore_default_lloops_c_kernels_line913_0.cpp  (+244 more)
codelets/: array_add.cpp  array_copy.cpp  array_min.cpp  bench_common.hpp  codelet_c_k_means_line109.cpp  codelet_crystal_cholesky.cpp  codelet_generate_seq_laplacian_line73.cpp  codelet_kernels_serial_amr_c_main_line500_0.cpp  codelet_kernels_serial_amr_c_main_line502_0.cpp  codelet_kernels_serial_amr_c_main_line506_0.cpp  codelet_kernels_serial_amr_c_main_line508_0.cpp  codelet_kernels_serial_sparse_c_main_line236_0.cpp  codelet_kernels_serial_sparse_c_main_line256_0.cpp  codelet_kernels_serial_transpose_c_main_line176_0.cpp  codelet_kernels_stencil_c_main_line259_0.cpp  codelet_liblinear.cpp  codelet_libraries_default_daala_dct_c_compute_mse_line8488_0.cpp  codelet_libraries_default_daala_dct_c_compute_mse_line8488_8.cpp  codelet_libraries_default_daala_dct_c_compute_mse_line8497_0.cpp  codelet_libraries_default_daala_dct_c_dynamic_range_line8685_0.cpp  codelet_libraries_default_libsndfile_alac_c_alac_read_d_line575_0.cpp  codelet_libraries_default_twolame_encode_c_combine_lr_line330_0.cpp  codelet_libraries_default_twolame_encode_c_combine_lr_line330_1.cpp  codelet_libraries_default_twolame_psycho_1_c_psycho_1_hann_fft_pickmax_line184_0.cpp  codelet_libraries_default_twolame_psycho_3_c_psycho_3_fft_line89_0.cpp  codelet_livermore_default_lloops_c_endloop_line1795_0.cpp  codelet_livermore_default_lloops_c_endloop_line1795_3.cpp  codelet_livermore_default_lloops_c_kernels_line1031_0.cpp  codelet_livermore_default_lloops_c_kernels_line1113_0.cpp  codelet_livermore_default_lloops_c_kernels_line1113_3.cpp  codelet_livermore_default_lloops_c_kernels_line1340_0.cpp  codelet_livermore_default_lloops_c_kernels_line1351_0.cpp  codelet_livermore_default_lloops_c_kernels_line1351_64.cpp  codelet_livermore_default_lloops_c_kernels_line1444_0.cpp  codelet_livermore_default_lloops_c_kernels_line1444_144.cpp  codelet_livermore_default_lloops_c_kernels_line1444_156.cpp  codelet_livermore_default_lloops_c_kernels_line771_0.cpp  codelet_livermore_default_lloops_c_kernels_line869_0.cpp  codelet_livermore_default_lloops_c_kernels_line913_0.cpp  codelet_livermore_default_lloops_c_kernels_line937_0.cpp  (+239 more)
dataset/asm/: f32_copy_no_simd.txt  f32_copy_simd128.txt  f32_copy_simd256.txt  f64_copy_no_simd.txt  f64_copy_simd128.txt  f64_copy_simd256.txt  u16_copy_no_simd.txt  u16_copy_simd128.txt  u16_copy_simd256.txt  u32_copy_no_simd.txt  u32_copy_simd128.txt  u32_copy_simd256.txt  u64_copy_no_simd.txt  u64_copy_simd128.txt  u64_copy_simd256.txt  u8_copy_no_simd.txt  u8_copy_simd128.txt  u8_copy_simd256.txt  vec_add_f32_no_simd.txt  vec_add_f32_simd128.txt  vec_add_f32_simd256.txt  vec_add_f64_no_smid.txt  vec_add_f64_simd128.txt  vec_add_f64_simd256.txt
dataset/bench_bins/: benchmark_array_add____array_add_f32_no_simd_2075  benchmark_array_add____array_add_f32_simd128_337  benchmark_array_add____array_add_f32_simd256_187  benchmark_array_add____array_add_f64_no_simd_1259  benchmark_array_add____array_add_f64_simd128_669  benchmark_array_add____array_add_f64_simd256_537  (+473 more)
docs/html/: annotated.html  (+227 more)
plot_scripts/: accuracy_evol.py  approximations.py  gpu.py  kernels_void_space.py  sparse_multiplication_benchmarks.py  strong_scaling.py  strong_scaling_topology_finder.py  topology_finder_evolution.py  training_benchmarks.py  training_results.py
rapport/: conf.typ  rapport.typ  rapport_2.typ  references.bib  references2.bib  tab.md  utils.typ
src/: main.cpp  topology_finder.cpp
tests/: asm_parser.cpp  binary_parser.cpp  binary_with_split_parser.cpp  cycles_encoders.cpp  dummy.cpp  gpu.cpp  hexadecimal_parser.cpp  hexadecimal_with_split_parser.cpp  iparser.cpp  rawbinary_parser.cpp  recognises_xor.cpp  sparse_multiplication.cpp  xor_parser.cpp
training_results/: topology_finder.csv
(+394 files in other folders)
